--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Babai Bose",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
