--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "json-server": "^1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
